--- a/cucumberBeginner/pom.xml
+++ b/cucumberBeginner/pom.xml
@@ -38,6 +38,14 @@
 		<scope>test</scope>
 	</dependency>
 
+	<!-- https://mvnrepository.com/artifact/picocontainer/picocontainer -->
+	<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-picocontainer</artifactId>
+			<version>1.2.4</version>
+		</dependency>
+	
+
 
 	<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-jvm-deps -->
 	<dependency>
@@ -61,7 +69,7 @@
 		<groupId>info.cukes</groupId>
 		<artifactId>gherkin</artifactId>
 		<version>2.12.2</version>
-		<scope>test</scope>
+		
 	</dependency>
 
 
@@ -79,7 +87,7 @@
 		<groupId>org.mockito</groupId>
 		<artifactId>mockito-all</artifactId>
 		<version>1.10.19</version>
-		<scope>test</scope>
+		
 	</dependency>
 
 
@@ -88,7 +96,7 @@
 		<groupId>net.sourceforge.cobertura</groupId>
 		<artifactId>cobertura</artifactId>
 		<version>2.0.3</version>
-		<scope>test</scope>
+		
 	</dependency>
 
 	<dependency>
@@ -96,9 +104,36 @@
 		<artifactId>tools</artifactId>
 		<version>1.8</version>
 		<scope>system</scope>
-		<systemPath>C:\Program Files\Java\jdk1.8.0_73\lib\tools.jar</systemPath>
+		<systemPath>${project.basedir}\lib\tools.jar</systemPath>
 	</dependency>
-	    
+
+	<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-server -->
+	<dependency>
+		<groupId>org.seleniumhq.selenium</groupId>
+		<artifactId>selenium-server</artifactId>
+		<version>2.53.1</version>
+	</dependency>
     
   </dependencies>
+  
+  
+  <build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.6.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.20</version>
+				<inherited>true</inherited>
+			</plugin>
+		</plugins>
+		</build>
 </project>
