--- a/cucumberBeginner/pom.xml
+++ b/cucumberBeginner/pom.xml
@@ -12,107 +12,41 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <selenium.version>3.4.0</selenium.version>
+		<cucumber.version>1.2.5</cucumber.version>
+		<junit.version>4.12</junit.version>
+		<picocontainer.version>1.2.5</picocontainer.version>
   </properties>
 
   <dependencies>
     
-		<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-core -->
 	<dependency>
-		<groupId>info.cukes</groupId>
-		<artifactId>cucumber-core</artifactId>
-		<version>1.2.4</version>
-	</dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>${selenium.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-java</artifactId>
+			<version>${cucumber.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-junit</artifactId>
+			<version>${cucumber.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+		</dependency>
 
-	<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-java -->
-	<dependency>
-		<groupId>info.cukes</groupId>
-		<artifactId>cucumber-java</artifactId>
-		<version>1.2.4</version>
-	</dependency>
-
-	<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-junit -->
-	<dependency>
-		<groupId>info.cukes</groupId>
-		<artifactId>cucumber-junit</artifactId>
-		<version>1.2.4</version>
-		<scope>test</scope>
-	</dependency>
-
-	<!-- https://mvnrepository.com/artifact/picocontainer/picocontainer -->
-	<dependency>
+		<!-- for dependency injection -->
+		<dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-picocontainer</artifactId>
 			<version>1.2.4</version>
 		</dependency>
-	
-
-
-	<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-jvm-deps -->
-	<dependency>
-		<groupId>info.cukes</groupId>
-		<artifactId>cucumber-jvm-deps</artifactId>
-		<version>1.0.5</version>
-		<scope>test</scope>
-	</dependency>
-
-
-	<!-- https://mvnrepository.com/artifact/net.masterthought/maven-cucumber-reporting -->
-	<dependency>
-		<groupId>net.masterthought</groupId>
-		<artifactId>maven-cucumber-reporting</artifactId>
-		<version>3.2.0</version>
-	</dependency>
-
-
-	<!-- https://mvnrepository.com/artifact/info.cukes/gherkin -->
-	<dependency>
-		<groupId>info.cukes</groupId>
-		<artifactId>gherkin</artifactId>
-		<version>2.12.2</version>
-		
-	</dependency>
-
-
-	<!-- https://mvnrepository.com/artifact/junit/junit -->
-	<dependency>
-		<groupId>junit</groupId>
-		<artifactId>junit</artifactId>
-		<version>4.11</version>
-		<scope>test</scope>
-	</dependency>
-
-
-	<!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
-	<dependency>
-		<groupId>org.mockito</groupId>
-		<artifactId>mockito-all</artifactId>
-		<version>1.10.19</version>
-		
-	</dependency>
-
-
-	<!-- https://mvnrepository.com/artifact/net.sourceforge.cobertura/cobertura -->
-	<dependency>
-		<groupId>net.sourceforge.cobertura</groupId>
-		<artifactId>cobertura</artifactId>
-		<version>2.0.3</version>
-		
-	</dependency>
-
-	<dependency>
-		<groupId>com.sun</groupId>
-		<artifactId>tools</artifactId>
-		<version>1.8</version>
-		<scope>system</scope>
-		<systemPath>${project.basedir}\lib\tools.jar</systemPath>
-	</dependency>
-
-	<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-server -->
-	<dependency>
-		<groupId>org.seleniumhq.selenium</groupId>
-		<artifactId>selenium-server</artifactId>
-		<version>2.53.1</version>
-	</dependency>
     
   </dependencies>
   
@@ -132,7 +66,12 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.20</version>
-				<inherited>true</inherited>
+				
+				<configuration>
+						<includes>
+								<exclude>**/*runnerClass.java</exclude>
+						</includes>
+				</configuration>
 			</plugin>
 		</plugins>
 		</build>
