--- a/cucumberBeginner/pom.xml
+++ b/cucumberBeginner/pom.xml
@@ -69,7 +69,7 @@
 				
 				<configuration>
 						<includes>
-								<exclude>**/*runnerClass.java</exclude>
+								<include>**/*runnerClass.java</include>
 						</includes>
 				</configuration>
 			</plugin>
